- removed direct CSS to <body> - set proper background image customization - proper rigth alignment customization option for nav - fixed "Full Width Container" customization option for disp=posts

--- a/assets/less/_global.less
+++ b/assets/less/_global.less
@@ -20,7 +20,7 @@ html, html a {
     text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 }
 
-body {
+#skin_wrapper {
 	width: 100%;
 	height: 100%;
 	font-family: @font_body;
@@ -31,7 +31,9 @@ body {
     text-rendering: optimizelegibility !important;
     -webkit-font-smoothing: antialiased !important;
 	-moz-osx-font-smoothing: grayscale;
+}
 
+body {
 	a {
 		color: @primary;
 
