--- a/assets/less/_grid.less
+++ b/assets/less/_grid.less
@@ -255,7 +255,7 @@
 
 // Content Full Width
 // ======================================================================== /
-.disp_posts.detail_posts {
+.disp_posts {
 
     #content.full_widgth {
         padding: 30px 0;
