--- a/assets/less/disp/_disp_single.less
+++ b/assets/less/disp/_disp_single.less
@@ -703,6 +703,12 @@
                     color: @w;
                     text-decoration: none;
                 }
+				
+				&.help_plugin_icon {
+					padding: 0;
+					margin: 0 2px;
+					border: none !important;
+				}
             }
         }
 
